<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/night_backgroundgradient"
    android:orientation="vertical"
    android:padding="16dp">

    <SearchView
        android:id="@+id/searchField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/search_bar"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:queryHint="Search for a city...." />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/convertSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:textColorHint="@color/dark_blue"
        android:textOff="@string/celsius"
        android:textOn="@string/fahren"
        app:showText="true"
        app:thumbTint="@color/purple"
        app:trackTint="#FFFFFF" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center|top"
        android:orientation="vertical">


        <TextView
            android:id="@+id/currentCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city_name"
            android:textColor="#FDFDFD"
            android:textSize="30sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/currentTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_22_c"
            android:textColor="#FFFFFF"
            android:textSize="80sp" />

        <TextView
            android:id="@+id/feelslikeTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_22_c"
            android:textColor="#6EFFFFFF"
            android:textSize="20sp" />


        <ImageView
            android:id="@+id/currentSymbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/icon_01d"
            android:contentDescription="@string/current_weather_symbol" />

        <TextView
            android:id="@+id/currentDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/broken_clouds"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners"
        android:orientation="vertical">


        <GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:columnCount="2"
            android:rowCount="3"
            tools:ignore="UselessParent">
            <!--Grid Top left-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_columnWeight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/circle_outline"
                    android:contentDescription="@string/minimum_temperature_icon"
                    android:padding="20dp"
                    app:srcCompat="@drawable/temp" />

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/min_temp"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/currentMin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/data_blank"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_columnWeight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/circle_outline"
                    android:contentDescription="@string/maximum_temperature_icon"
                    android:padding="20dp"
                    app:srcCompat="@drawable/temp" />

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/max_temp"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/currentMax"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/data_blank"
                        android:textSize="14sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_columnWeight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/circle_outline"
                    android:contentDescription="@string/humidity_icon"
                    android:padding="25dp"
                    app:srcCompat="@drawable/humidity" />

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/humidity"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/currentHumidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/data_blank"
                        android:textSize="14sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_columnWeight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/circle_outline"
                    android:contentDescription="@string/wind_speed_icon"
                    android:padding="30dp"
                    app:srcCompat="@drawable/wind" />

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wind_speed"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/currentWind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/data_blank"
                        android:textSize="14sp" />
                </LinearLayout>

            </LinearLayout>

        </GridLayout>


        <Button
            android:id="@+id/tidalButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/purple"
            android:text="Tidal information" />


    </LinearLayout>


</LinearLayout>

