<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/night_backgroundgradient"
    android:orientation="vertical"
    android:padding="16dp">

    <Button
        android:id="@+id/weatherButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/light_grey"
        android:textColor="@color/dark_grey"
        android:text="Back to dashboard" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="top|center"
        android:paddingTop="25dp">


        <TextView
            android:id="@+id/currentCityTidal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city_name"
            android:textColor="#FDFDFD"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/currentTempTidal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_22_c"
            android:textColor="#FFFFFF"
            android:textSize="80sp" />

        <TextView
            android:id="@+id/feelslikeTempTidal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_22_c"
            android:textColor="#6EFFFFFF"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/currentSymbolTidal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/icon_01d"
            android:contentDescription="@string/current_weather_symbol" />

        <TextView
            android:id="@+id/currentDescriptionTidal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/broken_clouds"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />




    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners"
        android:orientation="vertical">


        <GridLayout
            android:id="@+id/gridLayoutTidal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:columnCount="2"
            android:rowCount="3"
            tools:ignore="UselessParent">
            <!--Grid Top left-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_columnWeight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/circle_outline"
                    android:contentDescription="Water temprature icon"
                    android:padding="20dp"
                    app:srcCompat="@drawable/temp"
                    />

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Water temp"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/currentWaterTemp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/data_blank"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_columnWeight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/circle_outline"
                    android:contentDescription="Sea level icon"
                    android:padding="20dp"
                    app:srcCompat="@drawable/sea_level_symbol" />

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Sea level"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/seaLevel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/data_blank"
                        android:textSize="14sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_columnWeight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/circle_outline"
                    android:contentDescription="Low tide icon"
                    android:padding="25dp"
                    app:srcCompat="@drawable/low_tide_symbol" />

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Next low tide"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/nextLow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/data_blank"
                        android:textSize="14sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_columnWeight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/circle_outline"
                    android:contentDescription="High tide icon"
                    android:padding="30dp"
                    app:srcCompat="@drawable/high_tide_symbol" />

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Next high tide"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/nextHigh"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/data_blank"
                        android:textSize="14sp" />
                </LinearLayout>

            </LinearLayout>

        </GridLayout>


    </LinearLayout>


</LinearLayout>

